--- a/public/css/testbed.css
+++ b/public/css/testbed.css
@@ -55,3 +55,15 @@ body.testbed-page .api-detail-block {
 body.testbed-page .api-detail-block:last-child {
     margin-bottom: 0;
 }
+
+/* Accessibility helper class for visually-hidden labels */
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
+}
