--- a/public/css/style.css
+++ b/public/css/style.css
@@ -333,7 +333,7 @@ h1 {
     border-color: #3c8c6a;
 }
 
-.chart-container {
+.screen.game-container.active .chart-container {
     grid-area: chart;
     background-color: var(--card-bg);
     padding: 10px;
